force-app/main/default/objects/Contact_Notification_Preference__c/Contact_Notification_Preference__c.object-meta.xml
<CustomObject>
    <description>This object hold contact notification preferences</description>
    <label>Contact Notification Preference</label>
    <nameField>
        <displayFormat>CNP-{0000000}</displayFormat>
        <label>Contact Notification Preference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Notification Preferences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>