force-app/main/default/objects/Contact_Notification_Preference__c/fields/Notification_Type__c.field-meta.xml
<CustomField>
    <fullName>Notification_Type__c</fullName>
    <description>Picklist to hold notification types</description>
    <label>Notification Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Notification_Type</valueSetName>
    </valueSet>
</CustomField>