force-app/main/default/objects/Contact_Notification_Preference__c/fields/Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Language__c</fullName>
    <description>Field to hold preferred language for notification</description>
    <label>Preferred Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>French (Francais)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>