force-app/main/default/objects/Contact_Notification_Preference__c/validationRules/Do_not_notify_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_not_notify_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
INCLUDES(Notification_Preference__c , &quot;Do Not Notify&quot;), 
OR(
INCLUDES(Notification_Preference__c , &quot;SMS&quot;), 
INCLUDES(Notification_Preference__c , &quot;Email&quot;)
) 
)</errorConditionFormula>
    <errorMessage>You can not select any other notification preference with Do Not Notify</errorMessage>
</ValidationRule>